--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Rodrigo's Resumé</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/RodrigoZelada/resume/raw/master/Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/RodrigoZelada/resume/raw/master/Resumé.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
